# QRcode-recognition

./: CMakeLists.txt  README.md  ZBar.rar  main.cpp
